tests/errors/error_display/test_hll_defer_reject_return.err.expected
error: at 3:21: [HTC-ControlFlowInDefer] In function 'f': return is not allowed inside defer
   |
 3 |             defer { return; };
   |                     ^^^^^^
